--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   sqflite: ^2.3.3
   path: ^1.9.0
+  image_picker:  ^1.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
