--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   sqflite: ^2.3.3
   path: ^1.9.0
   image_picker:  ^1.0.7
+  path_provider: ^2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
