--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path: ^1.9.0
   image_picker:  ^1.0.7
   path_provider: ^2.1.2
+  uuid: ^4.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
