--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   image_picker:  ^1.0.7
   path_provider: ^2.1.2
   uuid: ^4.4.0
+  flutter_local_notifications: ^17.2.1
+  timezone: ^0.9.3
 
 
   # The following adds the Cupertino Icons font to your application.
